assets/CSS/style-header.css
/*---------------------------------INDEX-HEADER--------------------------------*/

.header-flex {
  display: flex;
  flex-direction: row;
  padding: 20px;
  align-items: center;
}

/*--------header background style--------*/
#header-background {
  background-color: #f7a31b;
  width: 100%;
  height: 90px;
  font-family: Arial, Helvetica, sans-serif;
  color: white;
}

#header-space {
  margin-right: 1000px;
}

.header-title-flex {
  flex-grow: 8;
}

.header-item-flex {
  flex-grow: 2;
  padding: 10px;
}

.header-icon-flex {
  flex-grow: 2;
  padding: 10px;

}

/*---------------------------------HEADER PAGES link styling and hovering---------------------------------*/

a,
a:visited {
  color: white;
  text-decoration: none;
}

a:hover {
  opacity: 69%;
}

/*------------------------graphic styles for items in the header------------------------*/
#header {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
  color: white;
  background-color: #f7a31b;
  text-align: center;
  align-items: center;
}

#flex-items {
  font-size: 30px;
}

/*------------------------margins and flex for header------------------------*/

@media (min-width: 1000px) {
  .header-name {
    margin-right: 15%;
    padding-left: 50px;
    width: 100%;
  }
}

.flex-header-width {
  flex-basis: 1000px;
}

.flex-header-width {
  flex-grow: 1;
}

.flex-pages-width {
  flex-grow: 1;
}


/*------------------------margins and flex pages in the header------------------------*/

.flex-items {
  margin-left: 4%;
  margin-right: 4%;
}

.flex-icons-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  scale: 90%;
}

/*------------------------margins and flex social icons in the header------------------------*/

.flex-icon-style {
  margin-left: 4%;
  margin-right: 4%;
}

.flex-nav-button {
  display: flex;
  flex-direction: row;
  order: 2;
  margin-left: 30%;
}

.hidden-nav-button {
  display: none;
}

/*------------------------responsive header becomes smaller------------------------------*/


@media (max-width: 1000px) {
  #nav-button {
    visibility: visible;
    display: flex;
    min-width: 50px;
    max-width: 50px;
    margin-right: 40px;
    position: fixed;
    right: 0;
  }

  .flex-mobile-button {
    order: 2;
    margin-right: 50%;
  }

  #mobile-hidden {
    display: none;
  }

  .mobile-menu-title {
    display: flex;
    flex-direction: row;
    flex: 50%;
    order: 1;
    margin-right: 30%;
    align-items: center;
  }

}

/*------------------------Drop Down Mobile Menu (1000px)------------------------------*/

